LEPL-23: Доработал файл openapi.yaml. Откорректировал классы контроллеров api-gateway.
