# api-gateway/src/main/resources/openapi.yaml
@@ -7,31 +7,36 @@ servers:
   - url: http://localhost:8080
     description: Generated server url
 tags:
-  - name: Learning Progress Management
-    description: Получение процесса обучения учеников
-  - name: Course Management
-    description: Управление курсами и их содержимым
-  - name: User Management
-    description: Получение или изменение информации о пользователе
-  - name: Admin module management.
-    description: Управление модулями и их содержимым для админов.
-  - name: Slot Management
-    description: Управление слотами менторов
-  - name: Access Management
+  - name: Admin Course Controller
+    description: Управление курсами и их содержимым для админов
+  - name: Admin Mentor Time Slot Controller
+    description: Интерфейс для управления слотами менторов для администратора.
+  - name: Admin Module Controller
+    description: Управление модулями и их содержимым для админов
+  - name: Admin User Info Controller
+    description: Интерфейс для получения или изменения информации пользователя для админов
+  - name: Access Controller
     description: Управление доступами к курсам и модулям
-  - name: Slot Management.
-    description: Управление слотами менторов.
-  - name: Auth Management
+  - name: Auth Controller
     description: Регистрация и авторизация
-  - name: Module Management
+  - name: Course Controller
+    description: Управление курсами и их содержимым
+  - name: Module Controller
     description: Управление модулями и их содержимым
-  - name: Admin course management
-    description: Управление курсами и их содержимым для админов.
+  - name: Progress Controller
+    description: Получение процесса обучения учеников
+  - name: Tag Controller
+    description: Интерфейс для получения всех тегов
+  - name: Time Slot Controller
+    description: Управление слотами менторов
+  - name: User Info Controller
+    description: Интерфейс для получения или изменения информации пользователя
+
 paths:
   /user/mentor/register:
     post:
       tags:
-        - User Management
+        - User Info Controller
       summary: Выдает пользователю роль МЕНТОР
       description: Позволяет выдать пользователю роль МЕНТОР
       operationId: assignMentorRole
@@ -51,7 +56,7 @@ paths:
   /slot/create:
     post:
       tags:
-        - Slot Management
+        - Time Slot Controller
       summary: Создать слот
       description: Позволяет создать новый слот. Требуются права ADMIN или MENTOR
       operationId: createSlot
@@ -89,7 +94,7 @@ paths:
   /slot/book:
     post:
       tags:
-        - Slot Management
+        - Time Slot Controller
       summary: Забронировать слот
       description: Позволяет забронировать слот. Требуются права USER
       operationId: bookSlot
@@ -128,7 +133,7 @@ paths:
   /module/import:
     post:
       tags:
-        - Module Management
+        - Module Controller
       summary: Импорт модуля из Markdown файла
       description: Позволяет создать новый модуль из .md файла. Требуются права ADMIN или MENTOR
       operationId: importModuleFromMarkdown
@@ -174,7 +179,7 @@ paths:
   /module/create:
     post:
       tags:
-        - Module Management
+        - Module Controller
       summary: Создать модуль
       description: Позволяет создать новый модуль. Требуются права ADMIN или MENTOR
       operationId: createModule
@@ -212,7 +217,7 @@ paths:
   /course/create:
     post:
       tags:
-        - Course Management
+        - Course Controller
       summary: Создать курс
       description: Позволяет создать новый курс. Требуются права ADMIN или MENTOR
       operationId: createCourse
@@ -250,7 +255,7 @@ paths:
   /auth/token/refresh:
     post:
       tags:
-        - Auth Management
+        - Auth Controller
       summary: Обновление токена
       operationId: refreshToken
       parameters:
@@ -269,7 +274,7 @@ paths:
   /auth/reg:
     post:
       tags:
-        - Auth Management
+        - Auth Controller
       summary: Регистрация пользователя
       description: Позволяет зарегистрировать пользователя с ролью USER
       operationId: registration
@@ -295,7 +300,7 @@ paths:
   /auth/login:
     post:
       tags:
-        - Auth Management
+        - Auth Controller
       summary: Авторизация пользователя
       operationId: login
       requestBody:
@@ -314,7 +319,7 @@ paths:
   /access/module/get-access:
     post:
       tags:
-        - Access Management
+        - Access Controller
       summary: Выдать доступ к модулю
       description: Позволяет выдать доступ пользователю к указанному модулю курса
       operationId: giveModuleAccess
@@ -352,7 +357,7 @@ paths:
   /access/module/delete-access:
     post:
       tags:
-        - Access Management
+        - Access Controller
       summary: Отозвать доступ к модулю
       description: Позволяет отозвать доступ пользователя к указанному модулю курса
       operationId: revokeModuleAccess
@@ -390,7 +395,7 @@ paths:
   /access/course/get-access:
     post:
       tags:
-        - Access Management
+        - Access Controller
       summary: Выдать доступ к курсу
       description: Позволяет выдать доступ пользователю к указанному курсу
       operationId: giveCourseAccess
@@ -428,7 +433,7 @@ paths:
   /access/course/delete-access:
     post:
       tags:
-        - Access Management
+        - Access Controller
       summary: Отозвать доступ к курсу
       description: Позволяет отозвать доступ пользователя к указанному курсу
       operationId: revokeCourseAccess
@@ -466,7 +471,7 @@ paths:
   /user/{userId}:
     get:
       tags:
-        - User Management
+        - User Info Controller
       summary: Получить информацию о другом пользователе
       description: Позволяет получить пользовательскую информацию о другом пользователе
       operationId: getOtherUserInfo
@@ -493,7 +498,7 @@ paths:
   /user/me:
     get:
       tags:
-        - User Management
+        - User Info Controller
       summary: Получить свою информацию
       description: Позволяет получить пользовательскую информацию от пользователя
       operationId: getMyUserInfo
@@ -513,7 +518,7 @@ paths:
   /slot:
     get:
       tags:
-        - Slot Management
+        - Time Slot Controller
       summary: Выдать информацию обо всех слотах ментора
       description: Выдать информацию о слотах. Требуются права USER
       operationId: getMentorSlotsInfoForUser
@@ -550,7 +555,7 @@ paths:
   /slot/my:
     get:
       tags:
-        - Slot Management
+        - Time Slot Controller
       summary: Выдать информацию обо всех слотах ментора
       description: Выдать информацию о слотах и об участниках. Требуются права MENTOR
       operationId: getMentorSlotsInfo
@@ -580,7 +585,7 @@ paths:
   /progress/course/{courseId}/users:
     get:
       tags:
-        - Learning Progress Management
+        - Progress Controller
       summary: Получить всех учеников в курсе
       description: Позволяет получить информацию о всех учениках в курсе с текущим модулем. Требуются права ADMIN или MENTOR
       operationId: getAllUsersAtCourse
@@ -626,7 +631,7 @@ paths:
   /progress/course/{courseId}/statistics:
     get:
       tags:
-        - Learning Progress Management
+        - Progress Controller
       summary: Получить прогресс по курсу
       description: Позволяет получить прогресс обучения в курсе автором этого курса. Требуются права ADMIN или MENTOR
       operationId: getCourseProgressByMentor
@@ -662,10 +667,28 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CourseProgressResponse'
+  /course-tag/all:
+    get:
+      tags:
+        - Tag Controller
+      summary: Получить все теги курсов
+      description: Возвращает список всех тегов курсов
+      operationId: getAllTags
+      responses:
+        '200':
+          description: Список всех тегов курсов
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CourseTagDto'
+        '401':
+          description: Не авторизован
   /module/{courseId}/{moduleId}:
     get:
       tags:
-        - Module Management
+        - Module Controller
       summary: Получить модуль по ID
       description: Возвращает информацию о модуле по его идентификатору
       operationId: getModuleById
@@ -709,7 +732,7 @@ paths:
                 $ref: '#/components/schemas/ModuleDto'
     delete:
       tags:
-        - Module Management
+        - Module Controller
       summary: Удалить модуль
       description: Позволяет удалить модуль. Требуются права ADMIN или MENTOR
       operationId: deleteModule
@@ -754,7 +777,7 @@ paths:
   /course/{courseId}:
     get:
       tags:
-        - Course Management
+        - Course Controller
       summary: Получить курс по ID
       description: Возвращает информацию о курсе по его идентификатору
       operationId: getCourseById
@@ -786,7 +809,7 @@ paths:
                 $ref: '#/components/schemas/CourseDto'
     delete:
       tags:
-        - Course Management
+        - Course Controller
       summary: Удалить курс
       description: Позволяет удалить курс. Требуются права ADMIN или MENTOR
       operationId: deleteCourse
@@ -825,7 +848,7 @@ paths:
   /course/all:
     get:
       tags:
-        - Course Management
+        - Course Controller
       summary: Получить все курсы
       description: Возвращает список всех курсов, включая неактивные
       operationId: getAllCourses
@@ -849,7 +872,7 @@ paths:
   /course/all/active:
     get:
       tags:
-        - Course Management
+        - Course Controller
       summary: Получить активные курсы
       description: Возвращает список всех активных курсов
       operationId: getAllActiveCourses
@@ -873,10 +896,10 @@ paths:
   /admin/user/{userId}:
     get:
       tags:
-        - User Management
+        - Admin User Info Controller
       summary: Получить информацию о другом профиле.
       description: Позволяет получить информацию о профиле другого пользователя.
-      operationId: getOtherUserInfo_1
+      operationId: adminGetOtherUserInfo
       parameters:
         - name: userId
           in: path
@@ -900,10 +923,10 @@ paths:
   /admin/user/me:
     get:
       tags:
-        - User Management
+        - Admin User Info Controller
       summary: Получить информацию о своем профиле.
       description: Позволяет получить информацию о своем профиле.
-      operationId: getMyUserInfo_1
+      operationId: adminGetMyUserInfo
       responses:
         '200':
           description: Пользовательская информация выдана
@@ -920,10 +943,10 @@ paths:
   /admin/slot/all:
     get:
       tags:
-        - Slot Management.
+        - Admin Mentor Time Slot Controller
       summary: Получить информацию обо всех слотах ментора
       description: Получить информацию о слотах и участниках. Требуются права администратора.
-      operationId: getMentorSlotsInfo_1
+      operationId: adminGetMentorSlotsInfo
       parameters:
         - name: pageNumber
           in: query
@@ -959,10 +982,10 @@ paths:
   /admin/module/get-one:
     get:
       tags:
-        - Admin module management.
+        - Admin Module Controller
       summary: Получить модуль по ID.
       description: Возвращает информацию о модуле по его идентификатору. Необходимы права администратора.
-      operationId: getModuleById_1
+      operationId: adminGetModuleById
       parameters:
         - name: moduleId
           in: query
@@ -998,10 +1021,10 @@ paths:
   /admin/course/{courseId}:
     get:
       tags:
-        - Admin course management
+        - Admin Course Controller
       summary: Получить курс по ID
       description: Возвращает информацию о курсе по его идентификатору
-      operationId: getCourseById_1
+      operationId: adminGetCourseById
       parameters:
         - name: courseId
           in: path
@@ -1031,10 +1054,10 @@ paths:
   /admin/course/all:
     get:
       tags:
-        - Admin course management
+        - Admin Course Controller
       summary: Получить все курсы
       description: Возвращает список всех курсов, включая неактивные
-      operationId: getAllCourses_1
+      operationId: adminGetAllCourses
       parameters:
         - name: pageNumber
           in: query
@@ -1524,6 +1547,27 @@ components:
           type: string
         ignoreCase:
           type: boolean
+    CourseTagDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: ID тэга
+          example: 1
+        tagName:
+          type: string
+          description: Название тэга
+          example: backend
+        createdAt:
+          type: string
+          format: date-time
+          description: Дата создание тэга
+          example: 2023-01-15T10:00:00
+        isActive:
+          type: boolean
+          description: Флаг активности тэга
+          example: true
     PageCourseDto:
       type: object
       properties:
